2009-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused debug log
	* src/SocketCore.cc

2009-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Generated configure and Makefile.in using autoconf 2.63 and
	automake 1.10.2.  Removed AC_GNU_SOURCE from configure.ac because
	it is subset of AC_USE_SYSTEM_EXTENSIONS and we use latter.
	* configure.ac
	
2009-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Moved piece statistics stuff to new PieceStatMan class.
	Refactored PieceSelector interface.
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h
	* src/LongestSequencePieceSelector.cc
	* src/LongestSequencePieceSelector.h
	* src/Makefile.am
	* src/PieceSelector.h
	* src/PieceStatMan.cc
	* src/PieceStatMan.h
	* src/RarestPieceSelector.cc
	* src/RarestPieceSelector.h
	* src/RequestGroup.cc
	* test/DefaultPieceStorageTest.cc
	* test/InOrderPieceSelector.h
	* test/Makefile.am
	* test/PieceStatManTest.cc
	* test/RarestPieceSelectorTest.cc
	
2009-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added static member _protocolFamily to SocketCore.  By default,
	SocketCore uses AF_UNSPEC for getaddrinfo hints to resolve
	address. Sometime SocketCore::bind() and
	SocketCore::establishConnection() use difference protocl family
	and latter cannot connect to former. To avoid this situation, we
	limit protocol family to AF_INET for unit tests.
	* src/SocketCore.cc
	* src/SocketCore.h
	* test/AllTest.cc

2009-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Avoid std::bad_alloc for negative bencode string length.
	* src/bencode.cc
	
2009-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Supported segmented downloading with chunked transfer encoding and
	content-length.	
	* src/DownloadCommand.cc
	* src/HttpResponseCommand.cc

2009-05-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.3.3
	* configure.ac
